[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-flow-common"
version = "0.2.0"
description = "Shared database helpers and utils for File Flow project"
authors = [{ name = "Alfonso Falcone", email = "alfalcone1996@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pymongo>=4.0"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
